# webdemo

./: .gitignore  README.md  requirement.txt  requirements.txt  setup.cfg  setup.py
webdemo/api/: app.py  config.py  expose.py  hooks.py
webdemo/api/controllers/: root.py
webdemo/api/controllers/v1/: controller.py  users.py
webdemo/cmd/: api.py
webdemo/db/: api.py  models.py
webdemo/db/sqlalchemy/: alembic.ini
webdemo/db/sqlalchemy/alembic/versions/: 4bafdb464737_create_user_table.py
