[metadata]
name = webdemo
version = 0.0
summary = Web Application Demo
description-file = README.md
author = diabloneo
author-email = diabloneo@gmail.com
classifier =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    webdemo

[entry_points]
console_scripts =
